# sim8bit

./: .gitignore  README.md  pyproject.toml
src/sim8bit/: __init__.py  error.py  events.py  net.py  pin.py  port.py  undefined.py
src/sim8bit/components/: ram62256lp12.py
src/sim8bit/events/: __init__.py  _event.py  _event_handler.py  _event_scheduler.py  _timestamp.py
src/sim8bit/memory/: __init__.py  _eeprom.py  _interface.py  _ram.py  _rom.py
src/sim8bit/wire/: __init__.py  _bus.py  _net.py  _pin.py  _pin_state.py  _port.py
test/: test_net.py  test_pin.py  test_port.py
test/components/: test_ram62256lp12.py
test/events/: test_event_scheduler.py  test_timestamp.py
test/memory/: test_eeprom.py  test_ram.py  test_rom.py
test/wire/: test_bus.py  test_net.py  test_pin.py  test_port.py
