[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sim8bit"
description = "A simulator for a custom 8-bit computer."
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["typing_extensions", "pytest"]

[tool.setuptools.dynamic]
version = { attr = "sim8bit.__version__" }
